# plato

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-AGPLv3  README.md  Settings-sample.toml  build.sh  bundle.sh  config-sample.sh  dist.sh  download.sh  sim-touch-evts
crates/core/: Cargo.toml  build.rs
crates/core/src/: colour.rs  context.rs  device.rs  geom.rs  helpers.rs  input.rs  lib.rs  library.rs  metadata.rs  rtc.rs  ssh.rs  tasks.rs  unit.rs
crates/core/src/battery/: fake.rs  kobo.rs  mod.rs
crates/core/src/dictionary/: dictreader.rs  indexing.rs  mod.rs
crates/core/src/document/: djvu.rs  djvulibre_sys.rs  mod.rs  mupdf_sys.rs  pdf.rs
crates/core/src/document/epub/: mod.rs
crates/core/src/document/html/: css.rs  dom.rs  engine.rs  layout.rs  mod.rs  parse.rs  style.rs  xml.rs
crates/core/src/font/: freetype_sys.rs  harfbuzz_sys.rs  mod.rs
crates/core/src/framebuffer/: image.rs  kobo1.rs  kobo2.rs  linuxfb_sys.rs  mod.rs  mxcfb_sys.rs  sunxi_sys.rs  transform.rs
crates/core/src/frontlight/: natural.rs  premixed.rs  standard.rs
crates/core/src/input/: mod.rs
crates/core/src/input/gestures/: mod.rs  state_machine.rs
crates/core/src/input/handlers/: mod.rs  multi_touch.rs  single_touch.rs  snow.rs
crates/core/src/lightsensor/: kobo.rs
crates/core/src/peripherals/: mod.rs  usb.rs  wifi.rs
crates/core/src/settings/: mod.rs
crates/core/src/view/: battery.rs  button.rs  clock.rs  common.rs  dialog.rs  filler.rs  frontlight.rs  icon.rs  image.rs  input_field.rs  intermission.rs  key.rs  keyboard.rs  label.rs  menu.rs  menu_entry.rs  mod.rs  named_input.rs  notification.rs  page_label.rs  preset.rs  presets_list.rs  rounded_button.rs  search_bar.rs  slider.rs  top_bar.rs
crates/core/src/view/calculator/: bottom_bar.rs  code_area.rs  input_bar.rs  mod.rs
crates/core/src/view/dictionary/: bottom_bar.rs  mod.rs
crates/core/src/view/home/: address_bar.rs  book.rs  bottom_bar.rs  directories_bar.rs  directory.rs  library_label.rs  mod.rs  navigation_bar.rs  shelf.rs
crates/core/src/view/reader/: bottom_bar.rs  chapter_label.rs  margin_cropper.rs  mod.rs  (+3 more)
crates/emulator/: Cargo.toml
crates/emulator/src/: events_sim.rs  main.rs  unsafe_sync_cell.rs
crates/fetcher/: Cargo.toml
crates/fetcher/src/: main.rs
crates/kaesar/: Cargo.toml
crates/kaesar/src/: lib.rs  main.rs
(+38 files in other folders)
