[package]
authors = ["Skilfingr <skilvingr@gmail.com>"]
name = "kaesar-core"
version = "0.1.0"
edition = "2024"

[features]
sim = []

[lib]
crate-type = ["rlib"]

[dependencies]
anyhow = "1.0.100"
bitflags = "2.10.0"
byteorder = "1.5.0"
chrono = { version = "0.4.42", features = ["serde", "clock"], default-features = false }
downcast-rs = "2.0.2"
entities = "1.0.1"
flate2 = "1.1.5"
fxhash = "0.2.1"
globset = "0.4.18"
indexmap = { version = "2.13.0", features = ["serde"] }
kl-hyphenate = "0.7.3"
levenshtein = "1.0.5"
libc = "0.2.179"
nix = { version = "0.30.1", features = ["fs", "ioctl"] }
paragraph-breaker = "0.4.4"
percent-encoding = "2.3.2"
png = "0.18.0"
rand_core = "0.9.3"
rand_xoshiro = "0.7.0"
regex = "1.12.2"
septem = "1.1.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.17"
titlecase = "3.6.0"
toml = "0.9.8"
unicode-normalization = "0.1.25"
walkdir = "2.5.0"
xi-unicode = "0.3.0"
zip = "7.0.0"


# [profile.release-minsized]
# inherits = "release"
# panic = "abort"
# codegen-units = 1
# opt-level = "z"
# lto = true
# strip = true
