[package]
authors = ["Skilfingr <skilvingr@gmail.com>"]
name = "emulator"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "kaesar-emulator"
path = "src/main.rs"

[dependencies]
kaesar-core = { path = "../core", features = ["sim"] }
kaesar = { path = "../kaesar", features = ["sim"] }
sdl2 = "0.38.0"
