[package]
authors = ["Bastien Dejean <nihilhill@gmail.com>"]
name = "fetcher"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "article_fetcher"
path = "src/main.rs"

[dependencies]
kaesar-core = { path = "../core" }
signal-hook = "0.4.1"

[dependencies.reqwest]
version = "0.13.1"
features = ["rustls", "json", "blocking", "query"]
default-features = false
